--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.284.0",
     "mongoose": "^8.1.1",
