--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^11.0.13",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.284.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "next": "13.5.4",
     "react": "^18",
