--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.13",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.284.0",
     "moment": "^2.30.1",
     "mongoose": "^8.1.1",
