--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lucide-react": "^0.284.0",
     "moment": "^2.30.1",
     "mongoose": "^8.1.1",
-    "next": "13.5.4",
+    "next": "^14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.1",
