--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "next": "^14.1.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.1",
