--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/auth/[kindeAuth]/route.ts", "src/hooks/useAuthentication.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/auth/[kindeAuth]/route.ts", "src/hooks/useAuthentication.ts", "src/app/api/event/registerEvent/route.ts"],
   "exclude": ["node_modules"]
 }
